# rplycpp

./: CMakeLists.txt  LICENSE  README.md
samples/: CMakeLists.txt  my_types.hpp  sample_rplycpp_read_simple.cpp  sample_rplycpp_read_surface.cpp  sample_rplycpp_read_unordered.cpp  sample_rplycpp_write_simple.cpp  sample_rplycpp_write_surface.cpp
src/: CMakeLists.txt  rplycpp.cpp  rplycpp.hpp  rplycpp_reader.cpp  rplycpp_writer.cpp
tests/: CMakeLists.txt  test_rplycpp_read.cpp  test_rplycpp_write.cpp
tests/data/: simple_ply_surface.ply  simple_ply_xyz_rgb_normal.ply
